[package]
edition      = "2024"
name         = "OneWire_on_ESP32"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "OneWire_on_ESP32"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.1.0", features = ["esp32", "unstable"] }

esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32"] }

ds18b20 = "=0.1.1"
one-wire-bus = "0.1.1"
embedded-hal = "0.2.3"
embedded-hal-compat = "0.13.0"   # bridges esp-hal's eh 1.0 pin to eh 0.2's v2 traits
esp-println = { version = "0.17.0", features = ["esp32", "auto"] }
dht11 = "0.3.1"
embedded-dht-rs = { version = "0.5.0", features = ["dht11"] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
